Bug 354862: fix slash handling in xpicleanup so that it doesn't crash, r[OS/2]=mkaply, r[Win]/sr=dveditz