xpinstall/cleanup/InstallCleanupWin.cpp
@@ -106,8 +106,14 @@ int WINAPI WinMain( HINSTANCE, HINSTANCE, LPSTR args, int)
             
             strcpy(regFilePath, appPath);
             char* lastSlash = strrchr(regFilePath, '\\');
-            lastSlash++; 
-            *lastSlash = 0;//strip of the executable name
+            if (lastSlash) {
+              // path does contain backslash
+              lastSlash++; 
+              *lastSlash = 0; // strip off the executable name
+            } else {
+              // no backslash in path, just strip off everything
+              *regFilePath = 0;
+            }
             strcat(regFilePath, CLEANUP_REGISTRY); //append reg file name
     
             if ( GetFileAttributes(regFilePath) == 0xFFFFFFFF ) // file doesn't exist
